--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@atom/teletype-crdt": "^0.9.0",
     "event-kit": "^2.3.0",
     "google-protobuf": "^3.5.0",
+    "node-fetch": "^2.6.0",
     "pusher-js": "^4.2.2",
     "uuid": "^3.2.1",
-    "webrtc-adapter": "~6.1"
+    "webrtc-adapter": "~6.1",
+    "wrtc": "^0.4.1"
   },
   "devDependencies": {
     "@atom/teletype-server": "^0.18.1",
